<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.8</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.alok.home</groupId>
	<artifactId>home-event-service</artifactId>
	<version>1.0.0</version>
	<name>home-event-service</name>
	<description>Home Event Service</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
		<home.commons.version>2.0.6</home.commons.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>com.alok.home</groupId>
			<artifactId>home-commons-security</artifactId>
			<version>${home.commons.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-security</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.alok.home</groupId>
			<artifactId>home-commons-exception</artifactId>
			<version>${home.commons.version}</version>
			<exclusions>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>19</source>
					<target>19</target>
					<compilerArgs>--enable-preview</compilerArgs>
					<!--					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
				</configuration>
			</plugin>

			<!-- compile proto file into java files. -->
			<!--			<plugin>-->
			<!--				<groupId>com.github.os72</groupId>-->
			<!--				<artifactId>protoc-jar-maven-plugin</artifactId>-->
			<!--				<version>3.6.0.1</version>-->
			<!--				<executions>-->
			<!--					<execution>-->
			<!--						<phase>generate-sources</phase>-->
			<!--						<goals>-->
			<!--							<goal>run</goal>-->
			<!--						</goals>-->
			<!--						<configuration>-->
			<!--							<includeMavenTypes>direct</includeMavenTypes>-->

			<!--							<inputDirectories>-->
			<!--								<include>src/main/resources/proto</include>-->
			<!--							</inputDirectories>-->

			<!--							<outputTargets>-->
			<!--								<outputTarget>-->
			<!--									<type>java</type>-->
			<!--									<outputDirectory>src/main/java</outputDirectory>-->
			<!--								</outputTarget>-->
			<!--							</outputTargets>-->
			<!--						</configuration>-->
			<!--					</execution>-->
			<!--				</executions>-->
			<!--			</plugin>-->
		</plugins>
	</build>

	<!--
Note: "github" repository definition is present in setting.xml
-->
	<distributionManagement>
		<repository>
			<id>2-github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/alokkusingh/mvn-repo</url>
		</repository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>native</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>build-native</id>
								<goals>
									<goal>compile-no-fork</goal>
								</goals>
								<phase>package</phase>
							</execution>
						</executions>
						<configuration>
							<buildArgs>
								-H:+PrintClassInitialization
								-Dspring.graal.verbose=true
								-H:+InlineBeforeAnalysis
								-H:ReflectionConfigurationFiles=native/reflectconfig.json
							</buildArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
